adicionei mais cards

--- a/flexbox.html
+++ b/flexbox.html
@@ -108,14 +108,60 @@
                     <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
                     <a class="card-body-button">Saber mais</a>
                 </div>
-            </div>             
-            <div class="card">segundo card</div>
-            <div class="card">terceiro card</div>
-            <div class="card">quarto card</div>
-            <div class="card">quinto card</div>
-            <div class="card">sexto card</div>
-            <div class="card">sétimo card</div>
+            </div>     
+            <div class="card">
+                <img class="card-img-top" src="image/card2.jpeg"/>
+                <div class="card-body">
+                    <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
+                    <a class="card-body-button">Saber mais</a>
+                </div>
+            </div>    
+            <div class="card">
+                <img class="card-img-top" src="image/card3.jpeg"/>
+                <div class="card-body">
+                    <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
+                    <a class="card-body-button">Saber mais</a>
+                </div>
+            </div>    
+            <div class="card">
+                <img class="card-img-top" src="image/card4.jpeg"/>
+                <div class="card-body">
+                    <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
+                    <a class="card-body-button">Saber mais</a>
+                </div>
+            </div>         
+            <div class="card">
+                <img class="card-img-top" src="image/card5.jpeg"/>
+                <div class="card-body">
+                    <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
+                    <a class="card-body-button">Saber mais</a>
+                </div>
+            </div>       
+            <div class="card">
+                <img class="card-img-top" src="image/card6.jpeg"/>
+                <div class="card-body">
+                    <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
+                    <a class="card-body-button">Saber mais</a>
+                </div>
+            </div>    
+            <div class="card">
+                <img class="card-img-top" src="image/card7.jpeg"/>
+                <div class="card-body">
+                    <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
+                    <a class="card-body-button">Saber mais</a>
+                </div>
+            </div>    
+            <div class="card">
+                <img class="card-img-top" src="image/card8.jpeg"/>
+                <div class="card-body">
+                    <p class="card-body-text">A cabeça do cara tá piradona kakakaka</p>
+                    <a class="card-body-button">Saber mais</a>
+                </div>
+            </div>    
         </div>
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
