--- a/flexbox.html
+++ b/flexbox.html
@@ -10,7 +10,7 @@
             /* Heat Wave, Blue Jeans */
             --primary-color:            #FF7A00; 
             --bg-color:                 #DDDDDD;
-            --container-box-bg-color:   #94fffb;
+            --container-box-bg-color:   #99CCFF;
             --primary-text-color:       #303030;
             --button-color:             #ff7a00;
         }
@@ -21,9 +21,7 @@
 <body>
     <main>
         <h1>Bom Dia, Usuário</h1>
-        <div class="container">12345ddddddddddd6789</div>
-        <div class="container">asdaseeeeeeeeeeeeeeedasd</div>
-        <div class="container half-container principal">
+        <div class="container half-container">
             <div class="container-item">
                 <h4>Saldo</h4>
                 <p id="saldo">R$ 917,00</p>
@@ -47,60 +45,15 @@
                 <p id="despesas">R$ 1300,00</p>
             </div>
         </div>
-        <div class="container half-container">0s df sdf sd fs dfsdfs dfs dfsdfsdfsdf sdfsdf sdf sdfsdf sdf sdfsdf as das da sdasdasdasdasda sdasdasd </div>
-        <div class="container half-container">0s df sdf sd fs dfsdfs dfs dfsdfsdfsdf sdfsdf sdf sdfsdf sdf sdfsdf as das da sdasdasdasdasda sdasdasd </div>
-        <div class="container half-container">0s df sdf sd fs dfsdfs dfs dfsdfsdfsdf sdfsdf sdf sdfsdf sdf sdfsdf as das da sdasdasdasdasda sdasdasd </div>
-        <div class="container snap-button">Adicionar<br>despesa</div>
-        <div class="container">Adicionar<br>receita</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <h2>Olá, mundo</h2>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0asdasdasd</div>
-        <div class="container">asdasdasdasd0</div>
-        <div class="container">0werwer</div>
-        <div class="container">0000000werwerwe00</div>
-        <div class="container">00000000werwer00</div>
-        <div class="container">0</div>
-        <div class="container">0000000werwerwe000</div>
-        <div class="container">00000000werwerwerwe</div>
-        <div class="container">asdasdasdasd0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="container">0</div>
-        <div class="break"></div>
+        <div class="container half-container snap-button-container">
+            <div class="snap-button"><a href="receita.html">+<br>Adicionar<br>receita</a></div>
+            <div class="snap-button"><a href="despesa.html">-<br>Adicionar<br>despesa</a></div>
+        </div>
+        <h2>Contas a pagar</h2>
+        <div class="container half-container"><h3>Não há nada para mostrar aqui :D</h3></div>
+        <h2>Despesas por categoria</h2>
+        <div class="container">Aqui deve ser mostrado um gráfico de rosca com legenda no lado esquerdo, mostrando os itens com marcação de cor do lado esquerdo e valor do lado direito, em reais.</div>
+        <h2>Quer aprender mais?</h2>    
         <div class="container card-container">
             <div class="card">
                 <img class="card-img-top" src="image/card1.jpeg"/>
@@ -161,7 +114,15 @@
         </div>
     </main>
     <footer>
-
+        Esta aplicação é uma atividade acadêmica realizada pelos alunos
+        do Eixo Computação da Univesp em 2022.1, na disciplina de
+        Projeto Integrador 2 para Computação.
+        <br>
+        <br>
+        <a href="https://github.com/Thiago-Alencar/projeto_integrador_02" class="github-anchor">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path class="github-icon" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+            Thiago-Alencar/projeto_integrador_02
+        </a>
     </footer>
 </body>
 </html>
